css/main.css
/* ... */
.mapboxgl-popup-anchor-bottom-left .mapboxgl-popup-tip {
    align-self: auto !important;
    position: relative;
    right: -0.2rem !important;
    bottom: 0.5rem !important;
    scale: 1.5 !important;
}

.mapboxgl-popup-anchor-top .mapboxgl-popup-tip, .mapboxgl-popup-anchor-top-left .mapboxgl-popup-tip, .mapboxgl-popup-anchor-top-right .mapboxgl-popup-tip{
    border-bottom-color: var(--grey-1) !important;
}

.mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
    border-right-color: var(--grey-1) !important;
}

.mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
    border-left-color: var(--grey-1) !important;
}

.mapboxgl-popup-content {
    color: var(--white-1);
    border-radius: 0.8rem !important;
    padding: 1.6rem 1.2rem !important;
    padding-bottom: 0.4rem !important;
    display: flex !important;
    flex-direction: column !important;
    gap: 1.2rem !important;
    background-color: var(--grey-1) !important;
    max-width: 24rem;g
    & > * {
        margin: 0;
    }
    & .content {
        padding: 0 !important;
        border-radius: var(--radius-sm) !important;
        width: 100% !important;
        align-items: center !important;
        gap: 1.2rem !important;
        position: relative;
        max-height: 9.2rem;
        & .small {
            top: calc(50% - 0.76rem);
            left: 7.6rem;
        }
        & .date {
            scroll-snap-align: start;
        }
        &:hover {
            background: none;
        }
        &.scroll {
            overflow-x: auto;
            scroll-snap-type: x mandatory;
            padding-bottom: 0.8rem !important;
            &::-webkit-scrollbar-track {
                background: var(--grey-1);
            }
            /* Adjust scrollbar dimensions */
            &::-webkit-scrollbar {
                width: 0.8rem;
                height: 0.8rem;
            }
        }
}
}

.mapboxgl-popup-close-button {
color: var(--white-0);
font-size: 2.4rem;
border-radius: 1.2rem;
}

#mapProject {
}
.globe, .kaart, #kaartReset {
    height: 2.4rem;
    width: 2.4rem;
}
.globe {
    background: url("../icons/globe.svg") no-repeat;
    cursor: pointer;

    &:hover {
        background: url("../icons/globe_light.svg") no-repeat;
    }
}
.kaart {
    background: url("../icons/map.svg") no-repeat;
    cursor: pointer;

    &:hover {
        background: url("../icons/map_light.svg") no-repeat;
    }
}
#kaartReset {
    background: url("../icons/reset.svg") no-repeat;
    padding: 1.2rem;
    cursor: pointer;

    &:hover {
        background: url("../icons/reset_light.svg") no-repeat;
    }
}

*, *::before, *::after {
/*outline: 1px solid dimgrey;*/
}

/* text */
h1 {
    font-family: "Inter", sans-serif;
    font-size: 5.2rem;
    text-align: left;
}

h2 {
    font-family: "Inter", sans-serif;
    font-weight: var(--font-weight-500);
    font-size: 2.4rem;
    display:block;
    width: 100%;
    margin: 0;
    transition: font-size 500ms;
    @media (max-width: 800px) {
        font-size: 2rem;
    }
}

h3 {
    font-family: "Inter", sans-serif;
    font-weight: var(--font-weight-500);
    font-size: 1.6rem;
    display:block;
    width: 100%;
    margin: 0;
    transition: font-size 500ms;
    @media (max-width: 800px) {
        font-size: 1.2rem;
    }
}

p {
    font-family: "Inter", sans-serif;
    font-size: 1.6rem;
    margin-block-end: 0;
    margin-block-start: 0;
}

.p--bold {
    font-family: "Inter", sans-serif;
    font-size: 1.6rem;
    font-style: normal;
    font-weight:  var(--font-weight-500);
    line-height: normal;
    display: block;
    /*align-self: center;*/
}

a {
    text-decoration: none;
    color: var(--white-1)
}

.small {
    /*display: flex;*/
    font-family: "Inter", sans-serif;
    font-size: 1.2rem;
    font-weight:  var(--font-weight-400);
    font-style: normal;
    line-height: normal;
    justify-content: flex-start;

    &.light {
        color: var(--white-2);
    }

    &.center{
        text-align: center;
        align-self: center;
        max-width: fit-content;
        text-wrap: nowrap;
    }

}

.flexrow {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.justify {
    text-align: justify;
}

.small--bold {
    font-family: "Inter", sans-serif;
    font-size: 1.2rem;
    font-weight:  var(--font-weight-600);
}
.cut{
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    width: 100%;
}

.floating-md {
    padding-left:  2.4rem;
    padding-right:  2.4rem;
    transition: padding-left 500ms;
    gap: 0.8rem;
    @media (max-width:800px){
        padding-left: 1.6rem;
        padding-right:  1.6rem;
    }
    @media (max-width:500px){
        padding-left: 0.8rem;
        padding-right:  0.8rem;
    }
}

.floating-sm {
    padding-left:  1.2rem;
    padding-right:  1.2rem;

    transition: padding-left 500ms;
    gap: 0.8rem;
    @media (max-width:800px){
        padding-left: 0.8rem;
        padding-right:  0.8rem;
    }
    @media (max-width:500px){
        padding-left: 0.4rem;
        padding-right:  0.4rem;
    }
}

::-ms-input-placeholder { /* Edge 12-18 */
    color: var(--white-2);
}

::placeholder {
    color: var(--white-2);
}

/* scrollbar styling */
.scroll {

    overflow-y: auto;
    & > * {
        height: max-content;
    }

    padding-right: 1rem;
    &::-webkit-scrollbar {
        width: 0.8rem;
        height: 0.8rem;
    }
    &::-webkit-scrollbar-track {
        margin: 0.4rem;
        width: 0.8rem;
        height: 0.8rem;
        background: var(--grey-1);
        border-radius: var(--radius-lg);
    }

    &::-webkit-scrollbar-thumb {
        background: var(--green-0);
        border-radius: var(--radius-lg);
    }

    &::-webkit-scrollbar-thumb:hover {
        background: var(--green-1);
    }
}
/* ... */

